Fix opening hours editing
Daily hours were not showing for some reason. I have no idea why it
stopped working. Maybe because it relied on some weird bootstrap
interaction that I wasn't aware of back when I added the feature.

Solution: replace bootstrap class with more css

--- a/resources/assets/sass/partak/partaknet.scss
+++ b/resources/assets/sass/partak/partaknet.scss
@@ -384,6 +384,10 @@ a.disabled {
 	display: block;
 }
 
+#showOpeningHours:not(:checked) ~ #openingHoursData {
+	display: none;
+}
+
 #openingHoursTable th {
 	text-align: right;
 	padding-right: 10px;
